<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentTop="true"
    android:padding="@dimen/activity_horizontal_margin" >
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content" 
	        android:orientation="horizontal">
	
	        <Button
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:onClick="doList"
	            android:text="@string/list_command" />
	
	        <Button
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:onClick="doDiff"
	            android:text="@string/diff_command" />
	
	        <Button
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:onClick="doPull"
	            android:text="@string/pull_command" />
	
	        <Button
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:onClick="doCap"
	            android:text="@string/cap_command" />
	    </LinearLayout>

	    <TextView
	        android:id="@+id/output"
	        android:layout_width="wrap_content"
	        android:layout_height="fill_parent"
	        android:text="@string/output_message" />
	    
    </LinearLayout>
    
    <RelativeLayout
        android:id="@+id/InnerRelativeLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true" >
    
	    <Button
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="bottom"
	        android:onClick="doLeave"
	        android:text="@string/leave_command" />
	</RelativeLayout>
</RelativeLayout>
